Optimized the UNL Alert functionality by movie some inline CSS to the proper CSS files and added a missing method to the tooltip plugin. Added better cookie handling for closed alerts and ensure that the alert "tool" remains visible while an alert is "active".

--- a/wdn/templates_3.0/css/header/colorbox.css
+++ b/wdn/templates_3.0/css/header/colorbox.css
@@ -40,11 +40,10 @@
 				#cboxClose.hover{background-position:-95px 0px;}
 
 /*UNL Styles for colorbox elements, inside the frame*/
-#alertboxContent h1.sec_header {
+#alertbox h1.sec_header {
 	border-color: #CC0000;
 }
-#alertboxContent .effectiveDate {
-    font-size:0.5em;
-    display:block;	
+#alertbox .two_col.right {
+	width: 70%;
 }
 
