--- a/wdn/templates_3.0/css/header/toolbar.css
+++ b/wdn/templates_3.0/css/header/toolbar.css
@@ -23,6 +23,10 @@ ul#wdn_tool_links li {
 ul#wdn_tool_links li:last-child {
     margin-right:0;	
 }
+ul#wdn_tool_links li.focus {
+	border-color:#cba166;
+	background:#f1e887;
+}
 #wdn_tool_links a {
 	display:inline-block;
 	width:20px;
